syntax = "proto3";

package coordinatorpb;

option go_package = "github.com/yanet-platform/yanet2/coordinator/coordinatorpb;coordinatorpb";

// ModuleService for the YANET modules.
service ModuleService {
	// SetupConfig applies configuration to a module.
	rpc SetupConfig(SetupConfigRequest) returns (SetupConfigResponse) {
	}
}

// SetupConfigRequest is a request to setup configuration for a module.
message SetupConfigRequest {
	// NUMANode specifies the NUMA node ID for which the configuration is
	// intended.
	uint32 numa_node = 1;
	// ConfigName is the name of the configuration to apply.
	string config_name = 2;
	// Config is the serialized configuration for the module.
	bytes config = 3;
}

// SetupConfigResponse is the response to a setup configuration request.
message SetupConfigResponse {
	// Success indicates whether configuration was successfully applied.
	bool success = 1;

	// Message provides additional information about the configuration
	// application.
	string message = 2;
}
